--- a/indospin188-online.html
+++ b/indospin188-online.html
@@ -63,6 +63,7 @@
     display: block;
     text-align: center;
     padding: 8px 0;
+    color: #fff;
 }
 </style>
 <script async="" src="https://cdn.ampproject.org/v0.js"></script>
